--- a/app/src/main/res/layout/fragment_teacher.xml
+++ b/app/src/main/res/layout/fragment_teacher.xml
@@ -7,10 +7,57 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:id="@+id/subjectText"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textColor="@color/colorWhiteText"
+        android:textSize="24sp"
+        android:letterSpacing="-0.05"
+        android:background="@color/greenBar"
+        android:text="Rivator" />
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="Teacher Fragment" />
+        android:layout_below="@+id/subjectText"
+        android:id="@+id/textLayout"
+        android:layout_marginRight="16dp"
+        android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/teacherListText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorDarkText"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:layout_weight="1"
+            android:letterSpacing="-0.06"
+            android:text="강사리스트"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/greenBar"
+            android:layout_marginBottom="21dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="16dp"
+            android:id="@+id/moreText"
+            android:textSize="12sp"
+            android:letterSpacing="-0.1" />
+
+    </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/textLayout"
+        android:background="?android:attr/listDivider"/>
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="392dp"
+        android:layout_below="@+id/textLayout"
+        android:id="@+id/teacherList"/>
 </RelativeLayout>
