--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,13 +11,66 @@
         android:layout_height="wrap_content">
         <RelativeLayout
             android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/block1"
             android:layout_marginTop="16dp"
             android:background="#FFFFFF">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textLayout"
+                android:id="@+id/textLayout1"
+                android:layout_marginRight="16dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/basicText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorDarkText"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_weight="1"
+                    android:letterSpacing="-0.06"
+                    android:text="강사리스트"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/greenBar"
+                    android:layout_marginBottom="21dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="16dp"
+                    android:id="@+id/moreText1"
+                    android:textSize="12sp"
+                    android:letterSpacing="-0.1" />
+
+            </LinearLayout>
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:layout_below="@+id/textLayout1"
+                android:scrollbars="horizontal"
+                android:padding="8dp"
+                android:id="@+id/recycler1">
+            </android.support.v7.widget.RecyclerView>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/block2"
+            android:layout_below="@+id/block1"
+            android:layout_marginTop="16dp"
+            android:background="#FFFFFF">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textLayout2"
                 android:layout_marginRight="16dp"
                 android:orientation="horizontal">
 
@@ -41,7 +94,7 @@
                     android:layout_marginBottom="21dp"
                     android:layout_marginRight="16dp"
                     android:layout_marginTop="16dp"
-                    android:id="@+id/moreText"
+                    android:id="@+id/moreText2"
                     android:textSize="12sp"
                     android:letterSpacing="-0.1" />
 
@@ -49,14 +102,61 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_below="@+id/textLayout"
+                android:layout_below="@+id/textLayout2"
                 android:background="?android:attr/listDivider"/>
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="392dp"
-                android:layout_below="@+id/textLayout"
+                android:layout_below="@+id/textLayout2"
                 android:id="@+id/teacherList"/>
         </RelativeLayout>
-    </ScrollView>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/block3"
+            android:layout_below="@+id/block2"
+            android:layout_marginTop="16dp"
+            android:background="#FFFFFF">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textLayout3"
+                android:layout_marginRight="16dp"
+                android:orientation="horizontal">
 
+                <TextView
+                    android:id="@+id/basicText3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorDarkText"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_weight="1"
+                    android:letterSpacing="-0.06"
+                    android:text="강사리스트"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/greenBar"
+                    android:layout_marginBottom="21dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="16dp"
+                    android:id="@+id/moreText3"
+                    android:textSize="12sp"
+                    android:letterSpacing="-0.1" />
+
+            </LinearLayout>
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:layout_below="@+id/textLayout3"
+                android:scrollbars="horizontal"
+                android:id="@+id/recycler2">
+            </android.support.v7.widget.RecyclerView>
+            </RelativeLayout>
+        </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
