--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.rinc.bong.rivatorproject.HomeActivity">
+    tools:context="com.rinc.bong.rivatorproject.activitys.HomeActivity">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
