--- a/app/src/main/res/layout/activity_student_sign_up.xml
+++ b/app/src/main/res/layout/activity_student_sign_up.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#f0f0f0"
     android:orientation="vertical"
-    tools:context="com.rinc.bong.rivatorproject.StudentSignUpActivity">
+    tools:context="com.rinc.bong.rivatorproject.activitys.StudentSignUpActivity">
 
     <ScrollView
         android:layout_width="match_parent"
