--- a/app/src/main/res/layout/activity_teacher_sign_up.xml
+++ b/app/src/main/res/layout/activity_teacher_sign_up.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#f0f0f0"
     android:orientation="vertical"
-    tools:context="com.rinc.bong.rivatorproject.TeacherSignUpActivity">
+    tools:context="com.rinc.bong.rivatorproject.activitys.TeacherSignUpActivity">
 
         <ScrollView
             android:layout_width="match_parent"
