--- a/app/src/main/res/layout/activity_student_sign_up.xml
+++ b/app/src/main/res/layout/activity_student_sign_up.xml
@@ -46,6 +46,7 @@
                 android:id="@+id/editPassword"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
+                android:inputType="textPassword"
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="24dp"
                 android:layout_marginBottom="2dp"
@@ -54,14 +55,14 @@
                 android:ems="10"
                 android:paddingLeft="10dp"
                 android:background="@color/colorWhiteText"
-                android:inputType="textPersonName"
                 android:hint="비밀번호" />
 
             <EditText
                 android:layout_width="match_parent"
+                android:layout_height="48dp"
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="24dp"
-                android:layout_height="48dp"
+                android:inputType="textPassword"
                 android:background="@color/colorWhiteText"
                 android:hint="비밀번호 재확인"
                 android:paddingLeft="10dp"
@@ -104,7 +105,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_below="@+id/editPhoneNumber"
-                android:background="#cfcfcf"
+                android:background="#e8e8e8"
                 android:textAlignment="center"
                 android:layout_marginBottom="2dp"
                 android:text="지역"
@@ -149,7 +150,7 @@
             <TextView
                 android:layout_width="72dp"
                 android:layout_height="48dp"
-                android:background="#cfcfcf"
+                android:background="#e8e8e8"
                 android:text="관심과목"
                 android:gravity="center"
                 android:layout_alignStart="@+id/textView5"
@@ -184,21 +185,25 @@
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:orientation="horizontal">
+
         <Button
+            android:id="@+id/button4"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="#dfdfdf"
+            android:textColor="@color/colorWhiteText"
             android:onClick="back"
-            android:text="이전으로"
-            android:layout_weight="1"/>
+            android:text="이전으로" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:onClick="next"
+            android:textColor="@color/colorWhiteText"
             android:layout_weight="1"
             android:background="#14e4a2"
-            android:text="다음으로" />
+            android:text="회원가입 완료" />
     </LinearLayout>
 </LinearLayout>
