--- a/app/src/main/res/layout/fragment_team_member.xml
+++ b/app/src/main/res/layout/fragment_team_member.xml
@@ -5,9 +5,9 @@
     tools:context="com.rinc.bong.rivatorproject.fragments.TeamMemberFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/listView"/>
 
 </FrameLayout>
