--- a/app/src/main/res/layout/item_default_person_list.xml
+++ b/app/src/main/res/layout/item_default_person_list.xml
@@ -6,7 +6,7 @@
     <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:id="@+id/teacherImgage"
+        android:id="@+id/imageView"
         android:src="@drawable/teacher"
         android:layout_marginLeft="23dp"
         android:layout_centerVertical="true"
@@ -14,7 +14,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/teacherName"
+        android:id="@+id/name"
         android:text="강사명"
         android:layout_marginTop="16dp"
         android:textAppearance="?textAppearanceLargePopupMenu"
@@ -24,9 +24,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="웹프로그래밍"
-        android:id="@+id/subject"
+        android:id="@+id/category"
         android:layout_marginBottom="12dp"
         android:layout_marginTop="8dp"
-        android:layout_below="@+id/teacherName"
+        android:layout_below="@+id/name"
         android:layout_marginLeft="81dp" />
 </RelativeLayout>
